<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/changePlayerNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_player_names"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:layout_centerInParent="true"
        android:textSize="25sp" />
    <ImageView
        android:id="@+id/playerOne"
        android:layout_width="150dp"
        android:layout_height="230dp"
        android:layout_toStartOf="@id/vs"
        android:layout_centerVertical="true"
        android:src="@drawable/blue_back" />
    <ImageView
        android:id="@+id/playerTwo"
        android:layout_width="150dp"
        android:layout_height="230dp"
        android:layout_toEndOf="@id/vs"
        android:layout_centerVertical="true"
        android:src="@drawable/blue_back"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/playerOne"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deck_size"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1_card_count"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deck_size"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p2_card_count"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>